update login page

--- a/Login/main.html
+++ b/Login/main.html
@@ -48,8 +48,8 @@
     getel('go').onclick=()=>{
         var x=getel('vl').value;
         if(x=='1')window.location.href='../Guest/Guest.html';
-        if(x=='2')window.location.href='../Admin/Admin.html';
-        if(x=='3')window.location.href='../Manage/Manage.html';
+        if(x=='2')window.location.href='../Admin/admin.html';
+        if(x=='3')window.location.href='../Manage/manage.html';
         if(x=='4')window.location.href='../Employee/recep.html';
     }
 </script>   
